--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,24 @@
 }
 
 body {
-  background-image: linear-gradient(150deg,#00bcd4, #fbd46d);
+  background-image: linear-gradient(0deg,#fbd46d,#00bcd4) ;
   color: black;
   overflow: hidden;
   text-align: center;
+  background-size: cover;
 }
 
 main{
   min-height: 100vh;
   padding: 25px;
+}
+
+.box{
+  border: 8px double black;
+  min-height: 90vh;
+  max-width: 60vw;
+  margin-left: 18%;
+  border-radius: 80px 0 80px 0;
 }
 
 .search-box{
@@ -27,7 +36,7 @@ main{
   height: 60px;
   width: 450px;
   border-radius: 0 0 0 40px;
-  box-shadow: -3px 3px #eebb4d;
+  box-shadow: -3px 3px grey;
   margin-left: -80px;
 }
 
@@ -39,11 +48,13 @@ main{
 .date{
   margin: 50px;
   font-size: 2rem;
+  font-weight: bold;
 }
 
 h1{
   font-size: 3.4rem;
   text-shadow: 3px 3px white;
+  padding-top: 35px;
 }
 
 .location-box .location{
@@ -51,7 +62,7 @@ h1{
   font-weight: bold;
 }
 
-.weather-box .temp{
+.weather-box {
   display: inline-block;
   background-color: #b8e4c9;
   margin:30px;
@@ -62,7 +73,6 @@ h1{
   box-shadow: 3px 4px black;
 }
 
-.weather-box .weather {
-  font-size: 2rem;
-  font-weight: bold;
+.weather {
+  padding: 10px;
 }
